tree-optimization/97835 - fix step vector construction for SLP induction

We're stripping conversions off access functions of inductions and
thus the step can be of different sign.  Fix bogus step CTORs by
converting the elements rather than the whole vector.

2020-11-16  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/97835
	* tree-vect-loop.c (vectorizable_induction): Convert step
	scalars rather than step vector.

	* gcc.dg/vect/pr97835.c: New testcase.